<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_drawer_expenses">Траты</string>
    <string name="nav_drawer_categories">Категории</string>
    <string name="nav_drawer_statistics">Статистика</string>
    <string name="nav_drawer_settings">Настройки</string>
    <string name="user_name">Александр</string>
    <string name="user_email">Alex@mail.ru</string>

    <string name="fragm_expenses">Затраты</string>
    <string name="fragm_categories">Категории</string>
    <string name="fragm_statistic">Статистика</string>
    <string name="fragm_settings">Настройки</string>

    <!-- For activity_detail -->
    <string name="add_expense_titel">"Добавить трату"</string>
    <string name="sum">"Сумма"</string>
    <string name="note_for_expens">"Примечание"</string>
    <string name="date_exp">"Дата"</string>
    <string name="button1">"Добавить"</string>

    <!--For activity login-->
    <string name="search_titel">"поиск"</string>
    <string name="login_text">"Логин"</string>
    <string name="password_text">"Пароль"</string>
    <string name="button_login">"Войти"</string>
    <string name="button_registration">"Регистрация"</string>

    <!--For Snackbar warning-->
    <string name="war_no_internet">"Нет подключения к интернету :("</string>
    <string name="war_no_log_pas">""Login и password должны быть не менее 5 символов</string>
    <string name="war_lof_busy">"Данный логин уже занят"</string>
    <string name="war_wrong_log">"Неверный Login"</string>
    <string name="war_wrong_pas">"Неверный пароль"</string>
    <string name="war_error">"ОШИБКА!!!"</string>
</resources>
