<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/login_text"-->
    <!--android:textSize="@dimen/text_size_22"-->
    <!--android:textAlignment="center" />-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:hint="@string/login_text"
        android:textSize="@dimen/text_size_22"
        android:maxLength="10"
        android:layout_margin="@dimen/margin_2" />

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/password_text"-->
    <!--android:textSize="@dimen/text_size_22"-->
    <!--android:textAlignment="center"-->
    <!--android:layout_marginTop="@dimen/margin_24" />-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password_text"
        android:textSize="@dimen/text_size_22"
        android:maxLength="10"
        android:layout_margin="@dimen/margin_2"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/button_login"
        android:layout_margin="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registation_button"
        android:text="@string/button_registration"
        android:layout_margin="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_gravity="center" />

</LinearLayout>