<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">

    <EditText
        android:id="@+id/sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sum"
        android:textSize="@dimen/text_size_22"
        android:inputType="number"/>
    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_for_expens"
        android:textSize="@dimen/text_size_22"
        android:inputType="text"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_exp"
        android:gravity="center"
        android:textSize="@dimen/text_size_14"/>
    <EditText
        android:id="@+id/date_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date" />



</LinearLayout>